--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
-ultralytics==8.0.227
+torch==2.4.1
+torchvision==0.19.1
+ultralytics==8.3.70
 opencv-python-headless==4.8.1.78
 pandas==2.1.1
+numpy==1.26.4
 matplotlib==3.8.0
 seaborn==0.13.0
 streamlit==1.26.0
-schedule==1.2.0
+streamlit-autorefresh==1.0.1
 scikit-learn==1.3.0
 statsmodels==0.14.0
 prophet==1.1.5
+schedule==1.2.0
 google-api-python-client==2.101.0
 google-auth==2.23.0
 google-auth-oauthlib==1.0.0
-ipywidgets
+Pillow==9.5.0
